Name:            typeable
Version:         0.0
Cabal-Version:   >= 1.2
Build-Type:      Simple
License:         BSD3
License-File:    LICENSE
Copyright:       (c) 2010 OpenCorpus Research Group - University of Osbnabrueck
Author:          OpenCorpus Research Group <info@open-corpus.org>
Maintainer:      OpenCorpus Research Group <info@open-corpus.org>
Bug-Reports:     http://trac.open-corpus.org/
Stability:       alpha
Homepage:        http://typeable.org
Category:        
Tested-With:     GHC == 6.12.3
Synopsis:        Web server for collecting and serving type definitions.
Description:     follows up
                 .
                 please be patient 
Data-Files:
                 README, INSTALL, BUGS, changelog

Executable        typeserver 
 hs-source-dirs:  src
 main-is:         typeserver.hs
 Build-depends:   base >= 4.0
 ghc-options:     -threaded

Library
 Build-Depends:   base >= 4.0,
                  largeword,
                  uuid,
                  cryptohash,
                  mtl,
                  haskell98,
                  haskell-src-exts,
                  time, time-extras,
                  process,
                  containers,
                  bytestring,
                  binary,
                  filepath,
                  directory,
                  text,
                  blaze-html,
                  happstack-server >= 0.5.0.4, 
                  old-locale,     
                  parsec >= 3.0.0
 hs-source-dirs:  src
 Exposed-Modules: Data.EBF,
                  Data.EBF.TypeIdent,
                  Data.Typeable.Extra,
                  Typeable.Internal.FormatHtml, 
                  Typeable.Internal.Classes, 
                  Typeable.Internal.TypesDefault, 
                  Typeable.Internal.InternalTypeDefs, 
                  Typeable.Internal.FormatHaskell, 
                  Typeable.Internal.Context, 
                  Typeable.Internal.NamespaceParser,
                  Typeable.Internal.Graph
                  ,Typeable.T0174bd2264004820bfe34e211cb35a7d
                  ,Typeable.T0219c59f732a8ef507215fbdb4cceacd
                  ,Typeable.T0ba85f3f10099c75d4b696d0cf944e09
                  ,Typeable.T0c761f8e757e4ea79d242a01136452d2
                  ,Typeable.T10f280df659654becb6e08122e846284
                  ,Typeable.T1566edb1a4de4aab8106e63293e9bfcf
                  ,Typeable.T1660b01f08dc4aedbe4c0941584541cb
                  ,Typeable.T16f4245df3cc0b534f028235ff8aae16
                  ,Typeable.T187e33b43715d8fe529de5014c864d85
                  ,Typeable.T1a55145e5bd21e8adc14067707192552
                  ,Typeable.T1ea5eae4702844f7acbc3c65b2a40093
                  ,Typeable.T205895c8d2df475b8d5ead5ee33d9f63
                  ,Typeable.T26b9a53370bc4489a322192e2e0416ce
                  ,Typeable.T2a94a7a8d4e049759d8dd546e72293ff
                  ,Typeable.T2b567f4ccc26027ea78edd227800fe94
                  ,Typeable.T2c62454c586f4bdea5e2b17e432db245
                  ,Typeable.T2dbb6df873ad4e4baeb82172074ed042
                  ,Typeable.T335b76330e724b64a5256190fb579dad
                  ,Typeable.T346674042a7248b4a94abff0726d0c43
                  ,Typeable.T34c13bdaac7d413ed735e64edcac7ff5
                  ,Typeable.T37c8a341f0b34cc6bbbc9f2403f09be3
                  ,Typeable.T3819884685d34bf19b3469304e15983d
                  ,Typeable.T3e81531118e14888be21de7921b15bb5
                  ,Typeable.T421496848904471ea3197f25e2a02b72
                  ,Typeable.T43c6cd1333b04fc8a480668ecb24768e
                  ,Typeable.T451f847e1cb642d0b7c5dbdfa03f41b5
                  ,Typeable.T45cc309eec2d47f3a7ed3af50c84a392
                  ,Typeable.T4b19d19d959322ac0ccd319a4d275bd0
                  ,Typeable.T4e0b8f8ea2b145228fa4ec74b559bf6a
                  ,Typeable.T4f7db06c439541658a09689d3e7dd909
                  ,Typeable.T50eae3e85d2d42c88754b026cc360981
                  ,Typeable.T53e0d483a64144259dce752799d64305
                  ,Typeable.T5448c6b79a084b4ea40d442c4fd2e125
                  ,Typeable.T5cae969a657448ebbc2eaf7f31d7340f
                  ,Typeable.T5e5c664cfc324271b542bf7ab0c9c104
                  ,Typeable.T606f253533d3420da3465afae341d598
                  ,Typeable.T62d2d5371f08461aa328bc06561594f6
                  ,Typeable.T6716d098a58743379e54c12f249cdc0c
                  ,Typeable.T6e2f1233f1c84e6b9bb37c405c666234
                  ,Typeable.T6ffbfb8682ad4f6a89d73e6d36c8fc7a
                  ,Typeable.T7704e26b08886d6b8c3c788a3a0b2db0
                  ,Typeable.T7af30cce93724981a16a80f3f193dc33
                  ,Typeable.T7b05ee3f0bbe6569f48d3947ec425493
                  ,Typeable.T7ee200d207963cca2d2a49719e97e973
                  ,Typeable.T8006b4b18388f841272dbebeee847723
                  ,Typeable.T8068cbdaf35e4618a7e798c67ff9bee0
                  ,Typeable.T90ce401bd12d4afcbe37331bed9e0423
                  ,Typeable.T9231d77f8da7460e976d7c5e4ff9b31b
                  ,Typeable.T9592f9fa4fae437a9e8d0917c14ff068
                  ,Typeable.T964f0abad1bd422faaf57b6d9938db31
                  ,Typeable.T9790ade9814a4aaca5eaa80c3e47685d
                  ,Typeable.T982dce0943f64a74858ff22c753ab01d
                  ,Typeable.T9e2e1e478e094a8abe5507f8574ac91f
                  ,Typeable.T9f64aa567f1d4456b7cef6bf7f299c06
                  ,Typeable.Ta078d5123ead415d8d857dc6dc15b475
                  ,Typeable.Ta0bbed7211664a319e09dc1c0f97bbd6
                  ,Typeable.Ta384955f99d4401ca54a3f9c62b78d0a
                  ,Typeable.Ta9c059006c8d4849af902d3ad12ee3cc
                  ,Typeable.Taaaa6ecd826d4604801c4fa962cc1446
                  ,Typeable.Tac2e770f2132aced749ec197385ff552
                  ,Typeable.Taf20e1db8f0d414f90625b1521e41378
                  ,Typeable.Tb0221a43509e4eddb062101bfd794bc4
                  ,Typeable.Tb6831ec097f14b8eba74b1e486b4175d
                  ,Typeable.Tbbabbac1510d49aa9da25d8033147c54
                  ,Typeable.Tc15eddf194ad44288cbabe701d5ae517
                  ,Typeable.Tc1b1f6c722c2436fab3180146520814e
                  ,Typeable.Tc211e54d6eef4234a7b675d5f696efe5
                  ,Typeable.Tc74c35ddb3ef689646c50be868d11bdf
                  ,Typeable.Tcc620c86261c781e03c8efd9a974b1cf
                  ,Typeable.Tce462e9df1144a1681886cd2619b5d1a
                  ,Typeable.Td847a61a1a944723ab4bfcfb214bd8aa
                  ,Typeable.Td9eef038b47d0820c160ceb8b6a89943
                  ,Typeable.Tdd9cf67a3e2b488daeb9df9c29566a99
                  ,Typeable.Te393b15b944c4b3597cd02b1be6d693b
                  ,Typeable.Te590e9ce9cea4dfe86a413e9270dd1c2
                  ,Typeable.Te959d9102edb11e091fa0800200c9a66
                  ,Typeable.Tec78dc6268e4fe6fe6df461f40359d62
                  ,Typeable.Ted098cc975df4cd0adb99a5b7dc48600
                  ,Typeable.Tf18ae792e5324a68a16f11ea5c61442a
                  ,Typeable.Tf2c4f6ddd939444ba209fbdf2152eb54
                  ,Typeable.Tf47867c11a4d4e30ab652240dd8e72ba
                  ,Typeable.Tf4b6d72c609d4003ba98917f8c56a678
                  ,Typeable.Tf8f49ef6bbe874a42926fa23d5b3bc19
                  ,Typeable.Tf9f2f27af0f649b4bc8946c467c3b76a
                  ,Typeable.Tff421b2c31774c37a7336c8245a74da9
